# CubeSat-Camera-Interface

./: .gitignore  .gitmodules  Camera Software Outline (early).docx  LICENSE  README.md
CubeSatCamera/: Compile, download and run instructions.txt  XCode - Drag OpenCV.framework here.rtf
CubeSatCamera/CubeSatCamera/: CMakeLists.txt  main.cpp
CubeSatCamera/CubeSatCamera.xcodeproj/: project.pbxproj
CubeSatCamera/CubeSatCamera.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CubeSatCamera/CubeSatCamera.xcodeproj/project.xcworkspace/xcuserdata/liamhebert.xcuserdatad/: UserInterfaceState.xcuserstate
Documentation/: CubeSat Payload Software Overview.docx
Source/: compile.sh  output.txt  run.sh
Source/Build-Debug/: CMakeCache.txt  CubeSat_Payload  Makefile  cmake_install.cmake  main.cpp.cbp
Source/Build-Debug/Error Logs/: 2018-12-30.txt
Source/Build-Test/: CMakeCache.txt  CTestTestfile.cmake  CubeSat_Payload  CubeSat_Payload_Test  Makefile  cmake_install.cmake
Source/Build-Test/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Source/Build-Test/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Source/Build-Test/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Source/Build-Test/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Source/Build-Test/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
Source/Source/: BuildTest.cpp  CMakeCache.txt  CMakeLists.txt  CameraDataTypes.hpp  CameraMessageInterface.cpp  CameraMessageInterface.hpp  CubeSatCamera.cpp  main.cpp  main.hpp
Source/Source-Test/: BuildTest.cpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  CubeSatCamera.cpp  CubeSat_Payload  Makefile
Source/Source-Test/Error Logs/: camera_2020-01-23
Source/Source-Test/googletest-build/: Makefile
Source/Source-Test/googletest-build/googlemock/: Makefile
Source/Source-Test/googletest-build/googletest/: Makefile
Source/Source-Test/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile
Source/Source-Test/include/: CubeSatCamera.hpp
Source/Source/include/: BuildTest.hpp  CameraDataTypes.hpp  CameraMessageInterface.hpp  CameraParameters.hpp  CubeSatCamera.hpp
Source/Source/include/internal-messaging/message/cc/: Message.cc
